fix user name line height on mobile

--- a/public/app/css/pages/profile.css
+++ b/public/app/css/pages/profile.css
@@ -57,6 +57,11 @@
 .profile__name {
     margin: 1.5em 0 0.74em;
     font-size: 2.2em;
+    line-height: 1.3em;
+
+    @media (--mobile){
+        font-size: 1.5em;
+    }
 }
 
 .profile__bio {
